deploy/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  labels:
    app.kubernetes.io/name: demo-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demo-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
